# verl

./: .gitignore  .pre-commit-config.yaml  README.md  global_weight.txt  global_weight_seq.txt  output.txt  pyproject.toml  requirements-npu.txt  requirements.txt  requirements_sglang.txt  setup.py  token_weight.txt  token_weight_seq.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  check-pr-title.yml  checkpoint_converter.yml  checkpoints.yml  cpu_unit_tests.yml  dataset.yml  doc.yml  e2e_ascend.yml  e2e_dapo.yml  e2e_digit_completion.yml  e2e_digit_completion_fire.yml  e2e_eval_aime24.yml  e2e_genrm_remote.yml  e2e_gpu.yml  e2e_grpo.yml  e2e_gsm8k.yml  e2e_gsm8k_dapo.yml  e2e_gsm8k_megatron.yml  e2e_gsm8k_prime.yml  e2e_lora.yml  e2e_one_step_off_policy.yml  e2e_ppo_trainer.yml  e2e_ppo_trainer_megatron.yml  e2e_ppo_trainer_megatron_sglang.yml  e2e_ppo_trainer_megatron_vllm.yml  e2e_prime.yml  e2e_sft.yml  e2e_sglang_gsm8k.yml  e2e_spin.yml  e2e_sppo.yml  e2e_vlm_geo3k.yml  gpu_test.yml  gpu_unit_tests.yml  kernels.yml  model.yml  pre-commit-full.yml  pre-commit.yml  pylint.yml  ray_cpu_test.yml  ray_gpu_test.yml  (+13 more)
docker/: Dockerfile.megatron  Dockerfile.ngc.vllm  Dockerfile.ngc.vllm0.8  Dockerfile.ngc.vllm0.8.sagemaker  Dockerfile.rocm  Dockerfile.sglang  Dockerfile.stage1.megatron  Dockerfile.stage2.megatron  Dockerfile.vemlp.vllm.te  Dockerfile.vllm.sglang.megatron  Dockfile.ngc.vllm0.8  README.md
docker/verl0.4-cu124-torch2.6-fa2.7.4/: Dockerfile.app.sglang.vllm.mcore0.12.deepep  Dockerfile.app.vllm.mcore0.12.deepep  Dockerfile.app.vllm.mcore0.13.preview  README.md
docker/verl0.5-cu126-torch2.7-fa2.7.4/: Dockerfile.app.sglang-preview.mcore0.12  Dockerfile.app.sglang0.4.8.mcore0.12  Dockerfile.app.sglang0.4.9.mcore0.12  Dockerfile.app.sglang0.4.9.post6.mcore0.12  Dockerfile.app.vllm.mcore0.12  README.md
docker/verl0.5-cu126-torch2.7.1-fa2.8.0/: Dockerfile.app.sglang.mcore0.12  Dockerfile.app.sglang.mcore0.13.preview  Dockerfile.base  README.md
docs/: README_vllm0.7.md  README_vllm0.8.md  conf.py  e2e_testing.md  hybrid_flow.rst  index.rst  requirements-docs.txt  single_controller.rst
docs/_static/: custom.css
docs/advance/: checkpoint.rst  dpo_extension.rst  fsdp_extension.rst  megatron_extension.rst  one_step_off.md  ppo_lora.rst
docs/algo/: baseline.md  dapo.md  entropy.md  spin.md  sppo.md
docs/amd_tutorial/: amd_build_dockerfile.md  amd_build_dockerfile_page.rst  amd_existing_docker.md  amd_vllm_page.rst
docs/api/: single_controller.rst  trainer.rst  utils.rst
docs/ascend/: ascend_vllm073.rst
docs/ascend_tutorial/: ascend_profiling.rst  ascend_profiling_en.rst  ascend_profiling_zh.rst  ascend_quick_start.rst
docs/examples/: config.rst  gsm8k_example.rst  ppo_code_architecture.rst
docs/experiment/: ppo.rst
docs/faq/: faq.rst
docs/perf/: device_tuning.rst  dpsk.md  nsight_profiling.md  perf_tuning.rst
docs/preparation/: install.rst  prepare_data.rst  reward_function.rst
docs/sglang_multiturn/: interaction_system.rst  multiturn.rst  sandbox_fusion.rst  search_tool_example.rst
docs/start/: agentic_rl.rst  install.rst  more_resources.rst  multinode.rst  quickstart.rst  ray_debug_tutorial.rst
docs/workers/: fsdp_workers.rst  megatron_workers.rst  ray_trainer.rst  sglang_worker.rst
examples/aux_model_update/: run_qwen2.5-1.5b_gsm8k_rf_baseline.sh  run_qwen2.5-1.5b_gsm8k_rf_baseline_aux.sh
examples/checkpoint/: run_deepseek_megatron_ckpt.sh  run_qwen_megatron_ckpt.sh
examples/data_preprocess/: full_hh_rlhf.py  geo3k.py  gsm8k.py  gsm8k_multiturn_w_interaction.py  gsm8k_multiturn_w_tool.py  math_dataset.py  multiturn.py
examples/gmpo_trainer/: README.md
examples/gpg_trainer/: run_qwen2-7b_math_megatron.sh
examples/grpo_trainer/: run_deepseek671b_math_megatron.sh  run_deepseek671b_math_megatron_80gb.sh  run_deepseek671b_math_megatron_96gb.sh  run_deepseek7b_llm.sh  run_deepseek7b_llm_math.sh  run_deepseek7b_llm_math_megatron.sh  run_deepseek7b_llm_megatron.sh  run_deepseek7b_llm_seq_balance.sh  run_minicpmo2_6.sh  run_moonlight16b_math_megatron.sh  run_qwen2-7b.sh  run_qwen2-7b_math.sh  run_qwen2-7b_math_megatron.sh  run_qwen2-7b_megatron.sh  run_qwen2-7b_seq_balance.sh  run_qwen2-7b_seq_balance_math_megatron.sh  run_qwen2-7b_sgl_megatron.sh  run_qwen2_5-7b_math_megatron_diff_tp.sh  run_qwen2_5_7b_grpo_discrete_prof_npu.sh  run_qwen2_5_7b_grpo_e2e_prof_npu.sh  run_qwen2_5_vl-7b-megatron.sh  run_qwen2_5_vl-7b-sglang.sh  run_qwen2_5_vl-7b.sh  run_qwen2_5_vl_32b_npu.sh  run_qwen2_5_vl_3b_npu.sh  (+6 more)
recipe/: README.md
scripts/: converter_hf_to_mcore.py  diagnose.py  format.sh  generate_trainer_config.sh  install_vllm_sglang_mcore.sh  legacy_model_merger.py  model_merger.py  rollout_viewer.py
tests/: test_protocol.py  test_protocol_on_cpu.py
verl/: __init__.py  base_config.py  protocol.py
(+686 files in other folders)
